# langbridge-code

./: .gitignore  README.md  Thoughts.md  pyproject.toml  todo_list.md
demo/: transformer_module.py  wumpus_game.py
demo/l5_smoke/: bank.py  driver.py
demo/simple_transformer/: __init__.py  model.py
evals/: README.md
evals/langbridge-bench/: README.md  collect_prs.py  reference_test.py  repos.txt  repos_remaining.txt  run_eval_docker.py  run_eval_kimi_code.py  sample_validated.jsonl
evals/swe-bench/: README.md  run_eval.py  run_eval_docker.py
evals/swebench/: README.md  run_eval.py  run_eval_docker.py
scripts/: vendor_superpowers.sh
session-history/: 20260608-151251.json  20260608-152335.json  20260608-152949.json  20260608-154718.json  20260609-161716.json  20260609-163727.json
src/langbridge_cli/: agent.py  config.py  context.py  debug.py  headless.py  limits.py  logging.py  main.py  multi_agent.py  parse.py  policy.py  prompt.py  roles.py  session.py  settings.py  tool_schema.py  trace.py  trajectory.py  ui.py
src/langbridge_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/langbridge_code/: config.json  headless.py  main.py  policy.py  settings.py
synthetic-env/: hello_world.py  surprise_garden.py
tests/: conftest.py  test_agents_tool.py  test_debug.py  test_execution_tool.py  test_limits.py  test_main.py  test_session.py  test_surprise_garden.py  test_trace.py  test_wumpus_game.py
tests/functional/: test_dispute_jury.py  test_functional.py  test_l4_l3_loop.py  test_l5.py  test_limits.py
tests/unit/: test_agent_worklog.py  test_agents_tool.py  test_approval_policy.py  test_bridge.py  test_browser.py  test_compaction.py  test_context_budget.py  test_context_stack.py  test_debug.py  test_execution_tool.py  test_explore.py  test_filesystem_tool.py  test_foreground_context.py  test_goal_evaluator.py  test_integration_merge.py  test_jury.py  test_llm_client.py  test_main.py  test_main_agent.py  test_managed_runtime.py  test_memory.py  test_merge_branch_tool.py  test_message_queue.py  test_optimizer_trace.py  (+30 more)
(+157 files in other folders)
