[project]
name = "langbridge-code"
version = "0.1.0"
description = "LangBridge Code — flat-workflow coding agent CLI (Kimi / OpenAI)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
langbridge-code = "langbridge_code.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
langbridge_code = ["config.json", "skills/**/*.md", "skills/**/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "torch>=2.12.0",
]
eval = [
    "datasets>=5.0.0",
    "swebench>=4.1.0",
]
